[gd_scene load_steps=7 format=2]

[ext_resource path="res://Src/Ant Party.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Src/GameOver/GameOver.gd" type="Script" id=2]
[ext_resource path="res://Src/TelaInicial/Background.jpg" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 42
extra_spacing_top = 10
extra_spacing_bottom = 10
extra_spacing_space = 5
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 42
extra_spacing_top = 10
extra_spacing_bottom = 10
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
margin_top = -2.0
margin_right = -2.0
margin_bottom = -2.0
script = ExtResource( 2 )

[node name="Controls" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -84.0
margin_top = -106.0
margin_right = 84.0
margin_bottom = 106.0

[node name="RestartBtn" type="Button" parent="Controls"]
margin_right = 168.0
margin_bottom = 68.0
focus_neighbour_top = NodePath("../QuitBtn")
custom_colors/font_color_focus = Color( 1, 0.6, 0.6, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0.6, 0.6, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Restart"
flat = true

[node name="QuitBtn" type="Button" parent="Controls"]
margin_top = 72.0
margin_right = 168.0
margin_bottom = 140.0
focus_neighbour_bottom = NodePath("../RestartBtn")
custom_colors/font_color_focus = Color( 1, 0.6, 0.6, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0.6, 0.6, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Quit"
flat = true

[node name="Background" type="Sprite" parent="."]
position = Vector2( 488, 273 )
scale = Vector2( 0.4, 0.4 )
z_index = -1
texture = ExtResource( 3 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_left = 0.368652
anchor_top = 0.0983333
anchor_right = 0.646973
anchor_bottom = 0.205
custom_fonts/normal_font = SubResource( 4 )
text = "Game Over"
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="pressed" from="Controls/RestartBtn" to="." method="_on_RestartBtn_pressed"]
[connection signal="pressed" from="Controls/QuitBtn" to="." method="_on_QuitBtn_pressed"]
